# petsc_examples

./: .gitignore  CMakeLists.txt  HeatTransfer1Dimpl.c  HeatTransfer1Dimpl.h  ex1.c  include_patch_pack.h  ref_case.c
heat_transfer_network/: CMakeLists.txt  main.cpp
network/: CMakeLists.txt  HeatTransfer1Dimpl.c  HeatTransfer1Dimpl.h  README.md  network.c  pipes1.c  ref_case.c
network_examples/pflow/: CMakeLists.txt  pf.c
network_examples/wash/: CMakeLists.txt  pipes1.c
